@@ -12,7 +12,9 @@ import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -22,6 +24,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.example.msorder.dtos.OrderResponse.toResponse;
 
@@ -42,20 +45,25 @@ public class OrderService {
     @Value("${spring.rabbitmq.queue}")
     private String queue;
 
+    @Caching(evict = {
+            @CacheEvict(value = "orders", allEntries = true),
+            @CacheEvict(value = "order", allEntries = true)
+    })
     public OrderResponse createOrder(OrderRequest orderRequest) {
         var order = new Order(orderRequest.status(), orderRequest.user(), orderRequest.items());
         this.repository.save(order);
         return toResponse(order);
     }
 
+    @Cacheable(value = "orders")
     public List<OrderResponse> findAll() {
         return repository.findAll()
                 .stream()
                 .map(OrderResponse::toResponse)
-                .toList();
+                .collect(Collectors.toList()); // for redis cache must use Collectors.toList()
     }
 
-    @Cacheable(value = "orders", key = "#id")
+    @Cacheable(value = "order", key = "#id")
     public OrderResponse findById(String id) {
         return toResponse(repository.findById(UUID.fromString(id))
                 .orElseThrow(() -> new IllegalArgumentException("Order not found")));
@@ -69,6 +77,10 @@ public class OrderService {
                 .toList();
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "orders", allEntries = true),
+            @CacheEvict(value = "order", allEntries = true)
+    })
     public void delete(String id) {
         repository.deleteById(UUID.fromString(id));
     }
